base/monitoring/prometheus-smartctl-exporter/networkpolicies/prometheus-egress-prometheus-smartctl-exporter.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-prometheus-smartctl-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus-smartctl-exporter
            app.kubernetes.io/instance: smartctl-exporter
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9633"
              protocol: TCP
